about page spacing fixed

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -232,13 +232,16 @@ svg {
   padding-top: var(--padd-main-v);
 }
 
+//exception in the "about" page
+#background {
+  padding-top: var(--padd-main-v);
+  padding-bottom: var(--padd-main-v);
+}
 
 /* Center container of content */
 .about-container {
   max-width: 100vw;
   margin: 0 auto;
-  // padding: var(--margin-nav) var(--padd-main-h);
-  // padding: 0 var(--padd-main-h);
   padding: var(--padd-main-h);
 }
 
@@ -471,6 +474,7 @@ a {
   padding-top: 0;
 }
 
+
 figure {
   margin: 0;
 }
@@ -580,6 +584,10 @@ p .post-result {
   margin-bottom: 0;
 }
 
+#about-pg {
+  padding-top: 0;
+}
+
 .about-img {
   width: 100%;
   margin: 0 0 var(--margin-nav) 0;
@@ -664,6 +672,18 @@ ul {
       padding-bottom: calc(1.5 * var(--padd-main-v));
   }
 
+  #background {
+    padding-top: var(--padd-main-v);
+    padding-bottom: var(--padd-main-v);
+  }
+
+  #bio {
+    padding-top: var(--padd-main-v);
+    padding-left: 0;
+    padding-right: 0;
+    padding-bottom: 0;
+  }
+
   .homepage {
       padding-top: calc(2 * var(--padd-main-v));
       padding-bottom: calc(2 * var(--padd-main-v));
@@ -671,7 +691,13 @@ ul {
       
   #background > .about-container {
       max-width: 580px;
-      margin-bottom: calc(2 * var(--padd-main-v));
+      // margin-bottom: calc(2 * var(--padd-main-v));
+      // margin-bottom: var(--padd-main-v);
+  }
+
+  #back-info {
+    padding-top: calc(2.7 * var(--padd-main-v));
+    padding-bottom: calc(2.7 * var(--padd-main-v));
   }
 
   .skills ul, .skills li {
@@ -1012,12 +1038,8 @@ ul {
   #about-pg > .about-container {
     max-width: 80%;
     padding-left: 0;
-    margin-bottom: var(--padd-main-v)
   }
 
-  #about-pg .about-container {
-    margin-bottom: var(--padd-main-v);
-  }
 
   .about-fig {
     flex-direction: row;
